--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "next-sanity": "^4.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timeago": "^7.1.0",
     "react-twitter-embed": "^4.0.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/eventsource": "^1.1.11",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
