--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-auth": "^4.22.1",
     "next-sanity": "^4.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-timeago": "^7.1.0",
     "react-twitter-embed": "^4.0.4",
     "typescript": "5.0.4"
